<resources>
    <string name="app_name">beber</string>
    <string name="hint_peso">Seu peso(Kg)</string>
    <string name="hint_idade">Sua idade</string>
    <string name="text_buttom_calcular">Calcular Ingestão Diária </string>
    <string name="text_buttom_lembrete">Lembrete</string>
    <string name="text_buttom_alarme"> Alarme </string>
    <string name="text_hora">00</string>
    <string name="text_dois_pontos">:</string>
    <string name="text_minutos">00</string>
    <string name="toast_informe_peso">informe seu peso</string>
    <string name="toast_informe_idade">Informe sua idade</string>
    <string name="dialog_titulo">Redefinir dados</string>
    <string name="dialog_desc">Deseja excluir todos os dados existentes</string>
  <string name="time_alarm">Hora Beber agua</string>
</resources>